--- a/_includes/blocks/text-block.html
+++ b/_includes/blocks/text-block.html
@@ -1,8 +1,10 @@
 <section class="{{include.block.block-classes | join: ' ' }}">
 
-  <div class="{{include.block.inner-block-classes | join: ' ' }}">
+
+  <div class="capped-width {{include.block.inner-block-classes | join: ' ' }}">
 
       {{include.block.content_html}}
 
   </div>
+
 </section>
