--- a/_includes/blocks/gallery.html
+++ b/_includes/blocks/gallery.html
@@ -1,4 +1,6 @@
-<section class="gallery padded centered grid {{include.block.block-classes | join: ' ' }}">
+<section class="gallery padded centered {{include.block.block-classes | join: ' ' }}">
+
+  <div class="capped-width grid">
 
   {% unless include.block.heading_html == nil %}
   <div class="col-12">
@@ -15,4 +17,7 @@
 
 
   <div class="margin-top-1"> {{include.block.gallery-text_html}}</div>
+
+  </div>
+
 </section>
