--- a/_includes/blocks/slider-video.html
+++ b/_includes/blocks/slider-video.html
@@ -1,4 +1,6 @@
-<section class="gallery padded centered grid {{include.block.block-classes | join: ' ' }}">
+<section class="gallery padded centered  {{include.block.block-classes | join: ' ' }}">
+
+  <div class="capped-width grid">
 
   {% unless include.block.heading_html == nil %}
   <div class="col-12">
@@ -32,5 +34,7 @@
   </div>
 
   {% endunless %}
+
+  </div>
 
 </section>
