--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,7 +35,7 @@
 <!-- Font Awesome Version 5 for Icons  -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css" />
 
-<!-- Magnific Popup for lightbox galleries   -->
+<!-- Fancybox Popup for lightbox galleries   -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 
 
