--- a/_sass/slider.scss
+++ b/_sass/slider.scss
@@ -1,10 +1,10 @@
 /* Slick slider */
 .slick-prev {
-  left: 0rem;
+  left: 5%;
 }
 
 .slick-next {
-  right: 0rem;
+  right: 5%;
 }
 
 .slick-next:before, .slick-prev:before {
