--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -7,7 +7,7 @@ layout: default
     <div class="bg-image square" style="background-image:url({{page.featured_image}});"></div>
     <p class="image-caption"> {{page.featured-image-caption}} </p>
   </div>
-  <div class="col-6_sm-12 padded title-container">
+  <div class="col-6_sm-12 padded title-container relative">
      <h1 class="big-bold {% unless page.vertical-heading == false %} vertical-text {% endunless %}"> {{page.title}}.</h1>
   </div>
   <div class="col-6_sm-12 padded-t-2">
@@ -79,9 +79,12 @@ layout: default
 
     .vertical-text {
       font-size: 8vw;
-      transform: rotate(90deg);
-      transform-origin: center bottom 0;
-      margin-left: -10%;
+      transform: translateX(-50%) translateY(-50%) rotate(90deg);
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin: 0;
+      padding: 0;
     }
 
     .campaign-heading {
@@ -105,8 +108,8 @@ layout: default
       .vertical-text {
         font-size: 15vw;
         transform: none;
-        margin-left: 0;
-        margin-bottom: 0;
+        position: static;
+        margin: 0;
       }
 
       .title-container {
