--- a/_sass/buttons-and-forms.scss
+++ b/_sass/buttons-and-forms.scss
@@ -50,6 +50,7 @@
       font-family: inherit;
       font-size: 100%;
       box-sizing: border-box;
+      -webkit-appearance: none;
     }
 
     input,
