--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -5,6 +5,7 @@
         Eyes of a Nomad.
      </h2>
     <p> Photographer & Videography specialising in Fashion, Swim & Lifestyle in Bali, Indonesia. </p>
+    <p class="subtle"> A Kelapa Creative Brand </p>
   </div>
   <div class="col-1 sm-hidden"></div>
   <!-- column -->
@@ -29,3 +30,6 @@
     </nav>
   </div>
 </footer>
+<div class="sub-footer">
+  <p class="subtle"> All Rights Reserved. Copyright 2020 <p>
+</div>
