--- a/_includes/blocks/slider-video.html
+++ b/_includes/blocks/slider-video.html
@@ -1,5 +1,7 @@
 <section class="gallery padded centered  {{include.block.block-classes | join: ' ' }}">
 
+  <a href="cloudcannon:#page_blocks[{{ forloop.index0 }}]" class="editor-link" data-cms-editor-link-style="modal"> Edit section </a>
+
   <div class="capped-width grid">
 
   {% unless include.block.heading_html == nil %}
