--- a/_includes/blocks/text-block.html
+++ b/_includes/blocks/text-block.html
@@ -1,5 +1,7 @@
 <section class="{{include.block.block-classes | join: ' ' }}">
 
+  <a href="cloudcannon:#page_blocks[{{ forloop.index0 }}]" class="editor-link" data-cms-editor-link-style="modal"> Edit section </a>
+
 
   <div class="capped-width {{include.block.inner-block-classes | join: ' ' }}">
 
