--- a/_includes/site-footer.html
+++ b/_includes/site-footer.html
@@ -4,8 +4,9 @@
     <h2>
         Eyes of a Nomad.
      </h2>
-    <p> Photographer & Videography specialising in Fashion, Swim & Lifestyle in Bali, Indonesia. </p>
-    <p class="subtle"> A Kelapa Creative Brand </p>
+    <p class="subtitle"> A Kelapa Creative Brand </p>
+    <p class="subtle"> Photography studio specialising in fashion, swim & lifestyle in Bali, Indonesia. </p>
+
   </div>
   <div class="col-1 sm-hidden"></div>
   <!-- column -->
@@ -24,12 +25,12 @@
       <a href="http://www.instagram.com/eyesofanomad" target="_blank">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="http://www.youtube.com/eyesofanomad" target="_blank">
+      <!-- <a href="http://www.youtube.com/eyesofanomad" target="_blank">
         <i class="fab fa-youtube"></i>
-      </a>
+      </a> -->
     </nav>
   </div>
+  <div class="col-12 sub-footer centered">
+    <p> All Rights Reserved. Copyright 2020 <p>
+  </div>
 </footer>
-<div class="sub-footer">
-  <p class="subtle"> All Rights Reserved. Copyright 2020 <p>
-</div>
