--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -73,8 +73,9 @@ layout: default
     .image-caption {
       transform: rotate(270deg);
       transform-origin: top left 0;
-      margin-left: -2rem;
+      margin-left: -1.5rem;
       font-size: 0.8rem;
+      font-style: italic;
     }
 
     .vertical-text {
