--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -413,6 +413,11 @@
     font-size: 0.9rem;
   }
 
+  p.subtitle {
+    font-size: 1rem;
+    font-style: italic;
+  }
+
   /* Icons */
 
   .far {        /* default styles for font awesome icons */
