--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -184,6 +184,14 @@ nav.hover-links {
     font-size: 1.2rem;
   }
 
+  .sub-footer p {
+    margin-top: 1rem;
+    opacity: 0.7;
+    font-size: 0.7rem;
+    font-family: "Source Sans Pro";
+    font-weight: 300;
+  }
+
 
   //  Cookie Banner
 
