--- a/_sass/editor.scss
+++ b/_sass/editor.scss
@@ -17,18 +17,20 @@ p.subtle {
 p.image-caption-left {
   transform: rotate(270deg);
   transform-origin: top left 0;
-  margin-left: -2rem;
-  font-size: 0.9rem;
+  margin-left: -1.5rem;
+  font-size: 0.8rem;
+  font-style: italic;
 }
 
 p.image-caption-right {
   transform: rotate(90deg);
   transform-origin: top right 0;
-  left: 2rem;
+  left: 1.5rem;
   top: -0.5rem;
   position: relative;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   text-align: right;
+  font-style: italic;
 }
 
 /* Image Styles */
