--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -14,6 +14,10 @@
  [class*=grid] {   margin: 0;  }
  [class*=col]  {   padding: 0; }
 
+ video {
+   max-width: 100%;
+ }
+
   // section {
   //   overflow-y: auto;
   // }
