--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
   {% if page.url == '/portfolio' %}
 
-    {% include portfolio.html %}
+    <script type="text/javascript" src="/assets/url-info-pull.js" defer></script>
 
   {% endif %}
 
