Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,11 @@
     <script type="text/javascript" src="/assets/url-info-pull.js" defer></script>
 
   {% endif %}
+  
+  
+  <!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/20316348.js"></script>
+<!-- End of HubSpot Embed Code -->
 
 </body>
 </html>
