--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,14 @@
 
 <!-- Google Analytics -->
 
-    <!-- paste your google analytics code here -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89911551-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-89911551-1');
+    </script>
 
 <!-- end google analytics -->
