change async to defer

--- a/_includes/body-scripts.html
+++ b/_includes/body-scripts.html
@@ -1,19 +1,16 @@
 <!-- these are all of your javascript links that will be added to the bottom of each page. Add new javascript resources here, or edit the main.js file to add your custom javascript or jquery -->
 
 <!-- adds jQuery library to your site -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js" defer></script>
 
 <!-- adds Fancybox Javascript -->
-<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js" async></script>
+<script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js" defer></script>
 
 <!-- Slick Slider -->
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" async></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js" defer></script>
 
 <!-- Pin This -->
-<script async defer data-pin-hover="true" data-pin-tall="true" data-pin-round="true" src="//assets.pinterest.com/js/pinit.js"></script>
-
-<!-- Animate on scroll  -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js" async></script>
+<script defer data-pin-hover="true" data-pin-tall="true" data-pin-round="true" src="//assets.pinterest.com/js/pinit.js"></script>
 
 <!-- this is your custom javascript/jQuery file -->
-<script src="/assets/main.js"></script>
+<script src="/assets/main.js" defer></script>
