--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 
 <!-- Typekit Fonts -->
-<link rel="stylesheet" href="https://use.typekit.net/vom7otq.css" rel="preload" as="font">
+<link rel="stylesheet" href="https://use.typekit.net/vom7otq.css">
 
 <!-- Gridlex -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/gridlex/2.7.1/gridlex.min.css"></link>
