--- a/_includes/blocks/slider.html
+++ b/_includes/blocks/slider.html
@@ -2,7 +2,7 @@
 
   <a href="cloudcannon:#page_blocks[{{ forloop.index0 }}]" class="editor-link" data-cms-editor-link-style="modal"> Edit section </a>
 
-  <div class="capped-width grid">
+  <div class="capped-width grid-center">
 
   {% unless include.block.heading_html == nil %}
   <div class="col-12">
