--- a/_includes/blocks/gallery.html
+++ b/_includes/blocks/gallery.html
@@ -13,7 +13,9 @@
 
     {% for item in include.block.gallery-images %}
     <a class="col-{{item.size}} padded-05" href="{{item.image_path}}" data-fancybox="gallery">
-      <div style="background-image:url('{{item.image_path}}')" class="bg-image {{item.size}} {{item.aspect-ratio}}"></div>
+      <div class="bg-image {{item.size}} {{item.aspect-ratio}} relative">
+        <img src="{{item.image_path}}" class="img-overlay" alt="{{item.alt}}" loading="lazy">
+      </div>
     </a>
     {% endfor %}
 
