--- a/_includes/project-loop-item-small.html
+++ b/_includes/project-loop-item-small.html
@@ -1,6 +1,8 @@
 <a class="col-3_sm-6_xs-10 padded-1 portfolio-item"
 href="{{project.url}}">
-  <div class="bg-image lazy" style="background-image:url('{{project.featured_image}}')"></div>
+  <div class="bg-image relative">
+      <img src="{{project.featured_image}}" class="img-overlay" alt="{{project.title}}" loading="lazy">
+  </div>
   <h2>{{project.title}}</h2>
   <p> {{project.subtitle}}</p>
 </a>
