--- a/_includes/related-projects.html
+++ b/_includes/related-projects.html
@@ -15,7 +15,9 @@
     {%  unless project.hidden == true %}
 
       <a href="{{project.url}}" class="col-3_xs-10 padded-1 centered">
-        <div class="bg-image square lazy" style="background-image:url({{project.featured_image}})"> </div>
+        <div class="bg-image square lazy relative">
+          <img src="{{project.featured_image}}" class="img-overlay" alt="{{project.title}}" loading="lazy">
+        </div>
         <h3 class="margin-top-1"> {{project.title}} </h3>
       </a>
 
