--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -57,7 +57,9 @@ page_blocks:
 
   {% for item in page.gallery-images %}
   <a class="col-{{item.size}} padded-05" href="{{item.image_path}}" data-fancybox="gallery">
-    <div style="background-image:url('{{item.image_path}}')" class="bg-image {{item.size}} {{item.aspect-ratio}} lazy"></div>
+    <div class="bg-image {{item.size}} {{item.aspect-ratio}} relative">
+      <img src="{{item.image_path}}" class="img-overlay" alt="{{item.alt}}">
+    </div>
   </a>
   {% endfor %}
 
