--- a/_sass/universal.scss
+++ b/_sass/universal.scss
@@ -125,6 +125,16 @@
         padding-bottom: 40%;
       }
 
+      .img-overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
 
 
   /* ------------- Utility Classes --------------  */
