--- a/_includes/project-loop-item.html
+++ b/_includes/project-loop-item.html
@@ -1,6 +1,6 @@
 <a class="col-4_sm-6_xs-10 padded-1 portfolio-item"
 href="{{project.url}}">
-  <div class="bg-image lazy relative" style="background-image:url('{{project.featured_image}}')">
+  <div class="bg-image lazy relative">
       <img src="{{project.featured_image}}" class="img-overlay" alt="{{project.title}}" loading="lazy">
   </div>
   <h2>{{project.title}}</h2>
