--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -79,7 +79,7 @@ page_blocks:
 <style>
 
     .vertical-text {
-      font-size: 8vw;
+      font-size: min(8vw, 120px);
       transform: translateX(-50%) translateY(-50%) rotate(90deg);
       position: absolute;
       left: 50%;
