Updated 1 file via CloudCannon.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -1,4 +1,4 @@
 ---
 ---
 
-@import 'universal', 'navigation', 'blog', 'buttons-and-forms', 'editor', 'modular-blocks', 'responsive', 'slider' ;
+@import 'universal', 'navigation', 'blog', 'buttons-and-forms', 'modular-blocks', 'responsive', 'slider' ;
